Allow the prefetch input to be set for each architecture
On the previous commit, the prefetch was being executed individually per
architecture, but the same content was being fetched for all of them.

This commit changes it so that meaningful content filtering is possible
in each of the prefetch task runs, making it so that only the
arch-specific content is available for each build task run.

Signed-off-by: Bruno Pimentel <bpimente@redhat.com>

--- a/pipeline-run.yaml
+++ b/pipeline-run.yaml
@@ -8,7 +8,7 @@ spec:
     name: hermetic-build
   params:
     - name: URL
-      value: "https://github.com/brunoapimentel/pip-cryptography-sample"
+      value: "https://github.com/brunoapimentel/pip-cryptography-sample.git"
     - name: REF
       value: "main"
     - name: IMAGE
@@ -17,5 +17,15 @@ spec:
       value: "pip"
     - name: TARGET_ARTIFACT
       value: "quay.io/bpimente/test-images"
+    - name: PLATFORMS
+      value:
+        - linux/x86_64
+        - linux/arm64
+        - linux/s390x
+    - name: PREFETCH_INPUTS
+      value:
+        - '{"platform": "linux/x86_64", "input": {"type": "pip", "binary": {"os": "manylinux", "py_version": "311", "arch": "x86_64"}}}'
+        - '{"platform": "linux/arm64", "input": {"type": "pip", "binary": {"os": "manylinux", "py_version": "311", "arch": "aarch64"}}}'
+        - '{"platform": "linux/s390x", "input": {"type": "pip", "binary": {"os": "manylinux", "py_version": "311", "arch": "s390x"}}}'
   taskRunTemplate:
     serviceAccountName: registry-credentials
